# db_test_system

./: .env.template  README.md  alembic.ini  app.py  development.md  log.py  pyproject.toml  requirements.txt  utils.py
desctop_client/: main.py  test_conf_tab.py  test_result_tab.py
manager/: db_manager.py  docker_manager.py  test_result_storage.py
migrations/: env.py
migrations/versions/: 04168f60ff07_docker_images.py  384267b0c9b6_create_test_results_table.py  3bf27efa0590_add_scenario.py  3f6e5622ee14_add_cpu_info.py  53125a5ea4a9_new_test_res.py  c869f0e1d567_add_ai_config.py  ccdbe592ee4e_init.py  cec5c4d9cd4d_add_docker_config.py
src/: main.py  utils.py
src/app/: main.py
src/app/config/: app_styles.py  config.py  log.py
src/app/core/: docker_test.py  scenario_steps.py
src/app/desktop_client/: main.py  test_conf_tab.py  test_runner.py
src/app/schemas/: schema.py
src/config/: app_styles.py  config.py  log.py
src/core/: docker_test.py  llm.py  scenario_steps.py
src/desctop_client/: image_config_editor_dialog.py  test_conf_tab.py  test_result_tab.py
src/desktop_client/: ai_config.py  config.py  docker_config.py  image_config_editor_dialog.py  main.py  test_conf_tab.py  test_result_tab.py  test_runner.py
src/manager/: db_manager.py  docker_manager.py  test_result_storage.py
src/migrations/: env.py
src/schemas/: enums.py  model.py  schema.py  test_init.py
src/storage/: config_storage.py  model.py  result_storage.py  test_result_storage.py
tests/core/: test_gen_test_res_data.py
translations/: app_en.qm  app_en.ts  app_ru.qm  app_ru.ts
(+47 files in other folders)
